--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -20,19 +20,19 @@
         tools:ignore="ContentDescription,UnusedAttribute" />
 
     <TextView
-        android:id="@+id/tv_user_name"
+        android:id="@+id/tv_name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="80dp"
+        android:text="@string/name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_back_button"
         app:layout_constraintStart_toEndOf="@id/iv_back_button"
-        app:layout_constraintTop_toTopOf="@id/iv_back_button"
-        tools:text="@string/user_name" />
+        app:layout_constraintTop_toTopOf="@id/iv_back_button" />
 
     <ImageView
         android:id="@+id/iv_share"
@@ -42,9 +42,9 @@
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:padding="8dp"
         android:src="@drawable/ic_baseline_share_24"
-        app:layout_constraintBottom_toBottomOf="@id/tv_user_name"
+        app:layout_constraintBottom_toBottomOf="@id/tv_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_user_name"
+        app:layout_constraintTop_toTopOf="@id/tv_name"
         app:tint="@color/black"
         tools:ignore="ContentDescription,UnusedAttribute" />
 
@@ -87,6 +87,18 @@
         tools:text="@string/user_id" />
 
     <TextView
+        android:id="@+id/tv_company_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:text="@string/company_location"
+        app:layout_constraintStart_toStartOf="@id/tv_user_id"
+        app:layout_constraintEnd_toEndOf="@id/tv_user_id"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_id" />
+
+    <TextView
         android:id="@+id/tv_follower_following"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,7 +108,7 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_user_id"
+        app:layout_constraintTop_toBottomOf="@id/tv_company_location"
         tools:text="@string/follower_1_s_following_2_s" />
 
     <TextView
@@ -113,6 +125,7 @@
         tools:text="@string/repository_1s" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
+        android:visibility="gone"
         android:id="@+id/shimmer_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
